// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for background: canvas, size: "small", isCompact: false 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a[aria-current="true"]), ::slotted(button[aria-selected="true"]) {
  color: var(--p-color-canvas) !important;
  background: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color 0s linear var(--p-duration-md) !important;
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not([aria-current="true"]):hover), ::slotted(button:not([aria-selected="true"]):hover) {
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-canvas);
  padding: var(--p-spacing-static-xs);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "medium", isCompact: false 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-md) !important;
  color: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a[aria-current="true"]), ::slotted(button[aria-selected="true"]) {
  color: var(--p-color-canvas) !important;
  background: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color 0s linear var(--p-duration-md) !important;
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not([aria-current="true"]):hover), ::slotted(button:not([aria-selected="true"]):hover) {
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "medium", isCompact: true 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 2px var(--p-spacing-static-sm) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-md) !important;
  color: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a[aria-current="true"]), ::slotted(button[aria-selected="true"]) {
  color: var(--p-color-canvas) !important;
  background: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color 0s linear var(--p-duration-md) !important;
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not([aria-current="true"]):hover), ::slotted(button:not([aria-selected="true"]):hover) {
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "small", isCompact: false 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a[aria-current="true"]), ::slotted(button[aria-selected="true"]) {
  color: var(--p-color-canvas) !important;
  background: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color 0s linear var(--p-duration-md) !important;
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not([aria-current="true"]):hover), ::slotted(button:not([aria-selected="true"]):hover) {
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: none, size: "small", isCompact: false 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  background: var(--p-color-frosted) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a[aria-current="true"]), ::slotted(button[aria-selected="true"]) {
  color: var(--p-color-canvas) !important;
  background: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color 0s linear var(--p-duration-md) !important;
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not([aria-current="true"]):hover), ::slotted(button:not([aria-selected="true"]):hover) {
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: none, size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, isCompact: false 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  background: var(--p-color-frosted) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a[aria-current="true"]), ::slotted(button[aria-selected="true"]) {
  color: var(--p-color-canvas) !important;
  background: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color 0s linear var(--p-duration-md) !important;
}
@media(min-width:480px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}

@media(min-width:760px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-sm) !important;
  }
}

@media(min-width:1000px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}

@media(min-width:1300px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-sm) !important;
  }
}

@media(min-width:1760px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}

@media (forced-colors: active) {
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not([aria-current="true"]):hover), ::slotted(button:not([aria-selected="true"]):hover) {
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: surface, size: "small", isCompact: false 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a[aria-current="true"]), ::slotted(button[aria-selected="true"]) {
  color: var(--p-color-canvas) !important;
  background: var(--p-color-primary) !important;
  transition: color var(--p-transition-duration, .4s) cubic-bezier(.25,.1,.25,1), background-color 0s linear var(--p-duration-md) !important;
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not([aria-current="true"]):hover), ::slotted(button:not([aria-selected="true"]):hover) {
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-surface);
  padding: var(--p-spacing-static-xs);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;
